--- a/Kalevala_(žilo).mw
+++ b/Kalevala_(žilo).mw
@@ -1,43 +1,43 @@
 {{Eländpunkt
  | Nimi = Kalevala <small>(vep. i karj.)</small><br />Калевала <small>(ven.)</small><br />Uhtua / Kalevala <small>(suom.)</small>
- | Lidnanznam = 
+ | Lidnanznam = Kalevala Coat of Arms.svg
  | Flag = Flag of Kalevala.svg
- | Lidnanznam text = 
+ | Lidnanznam text = Kalevalan znam
  | Flag text = Kalevalan flag
  | Valdkund = Venäma
  | Eläjiden lugu = 3,902
  | Voz' = 2016
  | Pind =
  | Fail = Дом жилой Леонтьевой.JPG
- | Pämez' = Zoja Pekšujeva (2013-)
+ | Pämez' = Zoja Pekšujeva<br/>(2013—)
  | Telefonkod = +7-81454-xx-xxx
  | Avtokod = 10
  | Aigvö = [[UTC]]+3 ([[MSK]]+0)
 }}
 {{Znamoičendad|Kalevala (znamoičendad)}}
-'''Kalevala''' (mugažo [[karjalan kel'|karjalan kelel]]; [[venäkel'|ven]].: ''Калевала'', [[suomen kel'|suom]].: ''Uhtua'' vai ''Kalevala'') om [[Venäma]]n lidnanvuitte žilo [[Karjalan Tazovaldkund]]an pohjoižes. Se om [[Kalevalan rahvahaline rajon|Kalevalan rahvahaližen rajonan]] administrativine keskuz da kaikiš suremb eländpunkt, mugažo Kalevalan lidnkundan keskuz.
+'''Kalevala''' (mugažo [[karjalan kel'|karjalan kelel]]; {{lang-ru|Калевала}}, {{lang-fi|Uhtua}} vai ''Kalevala'') om [[Venäma]]n lidnanvuitte žilo [[Karjalan Tazovaldkund]]an pohjoižes. Se om [[Kalevalan rahvahaline rajon|Kalevalan rahvahaližen rajonan]] administrativine keskuz da kaikiš suremb eländpunkt, mugažo Kalevalan lidnkundan keskuz.
 
 == Istorii ==
-Ezmäižed eländpunktad Kalevalan sijas mainitasoiš vozil 1552-1553. Necen eländpunktan nimi oli '''Uht''' ([[karjalan kel'|karj]]. ''Uhtua''). 19. voz'sadal [[Elias Lönnrot]] kirjuti tetaban [[Kalevala]]-eposan runoiden tobmad palad nügüdläižen žilon tahos.
+Ezmäižed eländpunktad Kalevalan sijas mainitasoiš vozil 1552−1553. Necen eländpunktan nimi oli '''Uht''' ({{lang-krl|Uhtua}}). 19. voz'sadal [[Elias Lönnrot]] kirjuti tetaban [[Kalevala]]-eposan runoiden tobmad palad nügüdläižen žilon tahos.
 
-Venäman rahvahanikoiden sodan aigan [[Pohjoižkarjalan valdkund|Uhtan Tazovaldkund]] oli tedotadud žilos lähižiden kundoiden suiman jäl'ghe vl 1920 keväz'kus, no Rusttan armijan sodaväged tuliba Uhtaha sil-žo vodel semendkus.
+Venäman rahvahanikoiden sodan aigan [[Pohjoižkarjalan valdkund|Uhtan Tazovaldkund]] oli tedotadud žilos lähižiden kundoiden suiman jäl'ghe vn 1920 keväz'kus, no Rusttan armijan sodaväged tuliba Uhtaha sil-žo vodel semendkus.
 
-Uht tegihe ühtennimižen rajonan keskuseks vl 1927 elokun 29. päiväl. Vl 1935 uhokun 20. päiväl [[VCIK]] udesnimiti rajonad Kalevala-eposan sadavoččen jubilejan oiktastuseks.
+Uht kändihe ühtennimižen rajonan keskuseks vn 1927 elokun 29. päiväl. Vn 1935 uhokun 20. päiväl [[VCIK]] udesnimiti rajonad Kalevala-eposan sadavoččen jubilejan oiktastuseks.
 
 [[Toine mail'man soda|Toižen mail'man sodan]] aigan frontan ezipird oli 16 kilometras žilospäi päivlaskmha.
 
-Vl 1963 udesnimitihe žilod-ki rajonan nimitusen mödhe nügüdläižikš i anttihe lidnanvuiččen žilon statusad.
+Vl 1963 udesnimitihe žilod-ki rajonan nimitusen mödhe nügüdläižikš i anttihe žilole lidnanvuittušt statusad.
 
 == Geografijan andmused ==
 Žilo sijadase rajonan keskuses, [[Keskkuito]]-järven-vezivaradimen pohjoižel randal. Matkad [[Petroskoi]]hesai om 411 kilometrad suvhe orhal, 553 km avtotedme. Lähembaine lidn om [[Kostamukš]], 74 km orhal, 148 km avtotedme.
 
 == Tobmuz ==
-10 ezitajad mülüdas Lidnkundan Nevondkundha (ven. ''Совет поселения''). Valitihe heid järgenduseližen kerdan vl 2013 sügüz'kun 8. päiväl (koumanz' kucund)<ref>[http://www.vybory.izbirkom.ru/region/izbirkom?action=show&vrn=4104002107148&region=10&prver=0&pronetvd=null Выборы депутатов Калевальского городского поселения третьего созыва (Kalevalan lidnkundan ezitajiden valičendad - koumanz' kucund). — Tedod mänijoiš valičendoiš da referendumiš (vybory.izbirkom.ru) // Venälaižen Federacijan keskuzline valičemižlaudkund.] {{ref-ru}}</ref>.
+Kaik 10 ezitajad mülüdas Lidnkundan Nevondkundha ({{lang-ru|Совет поселения}}). Valitihe heid järgenduseližen kerdan vn 2013 sügüz'kun 8. päiväl (koumanz' kucund)<ref>[http://www.vybory.izbirkom.ru/region/izbirkom?action=show&vrn=4104002107148&region=10&prver=0&pronetvd=null Выборы депутатов Калевальского городского поселения третьего созыва (Kalevalan lidnkundan ezitajiden valičendad - koumanz' kucund). — Tedod mänijoiš valičendoiš da referendumiš (vybory.izbirkom.ru) // Venälaižen Federacijan keskuzline valičemižlaudkund.] {{ref-ru}}</ref>.
 
 Zoja Pekšujeva radab lidnkundan pämehen vn 2013 sügüz'kun 8. päivän valičendoiden jäl'ghe. Hänen valdatusiden strok om nell' vot. Varapämez' da koume specialistad oma hänele abhu.
 
 == Eläjad ==
-Vn 2002 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 5 578 ristitud (kaikiš suremb ristitišt), vl 2010 — 4 529 ristitud. Rajonan ristitišton viž ühesandest eläb žilos.
+Vn 2002 Venäman rahvahanlugemižen mödhe žilon eläjiden lugu oli 5 578 ristitud (kaikiš suremb ristitišt), vl 2010 — 4 529 ristitud. Rajonan ristitišton viž ühesandest eläb žilos.
 
 [[Hristanuskond]]an kaks' tulendad om žilos: ortodoksine i lüteranine kundad.
 
@@ -46,15 +46,15 @@ Vspäi 1999 [[Kalevalan rahvahaline municipaline kodirandantedištandmuzei]] om 
 == Ižanduz da transport ==
 Ižandusen sarakod oma mecan varhapanend (mecižandusen edheotand) da avtotesauvondan kompanijan palakund.
 
-Avtote ühtenzoitab žilod [[Kem' (lidn)|Keminke]] vspäi 1928. 1920-1990-nzil vozil žilo oli ühtenzoittud mugažo lendimil, purulaivoil i motorvenehil Karjalan lidnoidenke.
+Avtote ühtenzoitab žilod [[Kem' (lidn)|Keminke]] vspäi 1928. 1920−1990-nzil vozil žilo oli ühtenzoittud mugažo lendimil, purulaivoil i motorvenehil Karjalan lidnoidenke.
 
-Kul'turpert', lapsidensädamižen pert' i 3 kirjištod oma žilos. Opendusen aluzkundad oma alaškol, keskškol, lapsidenmuzikškol, lapsidensportškol.
+Kul'turpert', lapsidensädamižen pert' i koume kirjištod oma žilos. Opendusen aluzkundad oma alaškol, keskškol, lapsidenmuzikškol, lapsidensportškol.
 
 == Homaičendad ==
 <references />
 
 == Irdkosketused ==
-* [http://www.kalevala-mo.ru/ Kalevalan lidnkundan oficialine sait.] {{ref-ru}}
+* [http://www.kalevala-mo.ru/ Kalevalan lidnankundan oficialine sait (''kalevala-mo.ru'').] {{ref-ru}}
 
 [[Kategorii:Kalevalan rahvahaline rajon|*]]
 [[Kategorii:Karjalan Tazovaldkundan lidnanvuiččed žilod]]
