--- a/Kalevala_(žilo).mw
+++ b/Kalevala_(žilo).mw
@@ -15,7 +15,7 @@
  | Aigvö = [[UTC]]+3 ([[MSK]]+0)
 }}
 {{Znamoičendad|Kalevala (znamoičendad)}}
-'''Kalevala''' (mugažo [[karjalan kel'|karjalan kelel]]; {{lang-ru|Калевала}}, {{lang-fi|Uhtua}} vai ''Kalevala'') om [[Venäma]]n lidnanvuitte žilo [[Karjalan Tazovaldkund]]an pohjoižes. Se om [[Kalevalan rahvahaline rajon|Kalevalan rahvahaližen rajonan]] administrativine keskuz da kaikiš suremb eländpunkt, mugažo Kalevalan lidnkundan keskuz.
+'''Kalevala''' (mugažo [[karjalan kel'|karjalan kelel]]; {{lang-ru|Калевала}}, {{lang-fi|Uhtua}} vai ''Kalevala'') om [[Venäma]]n lidnanvuitte žilo [[Karjalan Tazovaldkund]]an pohjoižes. Se om [[Kalevalan rahvahaline rajon|Kalevalan rahvahaližen rajonan]] administrativine keskuz da kaikiš suremb eländpunkt, mugažo Kalevalan lidnankundan keskuz.
 
 == Istorii ==
 Ezmäižed eländpunktad Kalevalan sijas mainitasoiš vozil 1552−1553. Necen eländpunktan nimi oli '''Uht''' ({{lang-krl|Uhtua}}). 19. voz'sadal [[Elias Lönnrot]] kirjuti tetaban [[Kalevala]]-eposan runoiden tobmad palad nügüdläižen žilon tahos.
@@ -32,7 +32,7 @@ Vl 1963 udesnimitihe žilod-ki rajonan nimitusen mödhe nügüdläižikš i antt
 Žilo sijadase rajonan keskuses, [[Keskkuito]]-järven-vezivaradimen pohjoižel randal. Matkad [[Petroskoi]]hesai om 411 kilometrad suvhe orhal, 553 km avtotedme. Lähembaine lidn om [[Kostamukš]], 74 km orhal, 148 km avtotedme.
 
 == Tobmuz ==
-Kaik 10 ezitajad mülüdas Lidnkundan Nevondkundha ({{lang-ru|Совет поселения}}). Valitihe heid järgenduseližen kerdan vn 2013 sügüz'kun 8. päiväl (koumanz' kucund)<ref>[http://www.vybory.izbirkom.ru/region/izbirkom?action=show&vrn=4104002107148&region=10&prver=0&pronetvd=null Выборы депутатов Калевальского городского поселения третьего созыва (Kalevalan lidnkundan ezitajiden valičendad - koumanz' kucund). — Tedod mänijoiš valičendoiš da referendumiš (vybory.izbirkom.ru) // Venälaižen Federacijan keskuzline valičemižlaudkund.] {{ref-ru}}</ref>.
+Kaik kümne ezitajad mülüdas Lidnankundan Nevondkundha ({{lang-ru|Совет поселения}}). Valitihe heid järgenduseližen kerdan vn 2013 sügüz'kun 8. päiväl (koumanz' kucund)<ref>[http://www.vybory.izbirkom.ru/region/izbirkom?action=show&vrn=4104002107148&region=10&prver=0&pronetvd=null Выборы депутатов Калевальского городского поселения третьего созыва (Kalevalan lidnankundan ezitajiden valičendad — koumanz' kucund). — Tedod mänijoiš valičendoiš da referendumiš // Venälaižen Federacijan keskuzline valičemižlaudkund (''vybory.izbirkom.ru'').] {{ref-ru}}</ref>.
 
 Zoja Pekšujeva radab lidnkundan pämehen vn 2013 sügüz'kun 8. päivän valičendoiden jäl'ghe. Hänen valdatusiden strok om nell' vot. Varapämez' da koume specialistad oma hänele abhu.
 
@@ -54,7 +54,7 @@ Kul'turpert', lapsidensädamižen pert' i koume kirjištod oma žilos. Opendusen
 <references />
 
 == Irdkosketused ==
-* [http://www.kalevala-mo.ru/ Kalevalan lidnankundan oficialine sait (''kalevala-mo.ru'').] {{ref-ru}}
+* [http://visitkalevala.ru/omsu/kaleval-skoe-gorodskoe-poselenie/ Kalevalan lidnankundan lehtpoled rajonan oficialižel ''visitkalevala.ru''-saital.] {{ref-ru}}
 
 [[Kategorii:Kalevalan rahvahaline rajon|*]]
 [[Kategorii:Karjalan Tazovaldkundan lidnanvuiččed žilod]]
