*Empty MediaWiki Message*

--- a/Kalevala_(žilo).mw
+++ b/Kalevala_(žilo).mw
@@ -55,6 +55,7 @@ Kul'turpert', lapsidensädamižen pert' i koume kirjištod oma žilos. Opendusen
 
 == Irdkosketused ==
 * [http://visitkalevala.ru/omsu/kaleval-skoe-gorodskoe-poselenie/ Kalevalan lidnankundan lehtpoled rajonan oficialižel ''visitkalevala.ru''-saital.] {{ref-ru}}
+{{Commons|Category:Kalevala (Uhtua)}}
 
 [[Kategorii:Kalevalan rahvahaline rajon|*]]
 [[Kategorii:Karjalan Tazovaldkundan lidnanvuiččed žilod]]
