--- a/Mujezerskii.mw
+++ b/Mujezerskii.mw
@@ -14,7 +14,7 @@
  | Avtokod = 10
  | Aigvö = [[UTC]]+3 ([[MSK]]+0)
 }}
-'''Mujezerskii''' ({{lang-ru|Муезерский}}, {{lang-krl|Mujejärvi}}, {{lang-fi|Mujejärvi / Muujärvi}}) om [[Venäma]]n lidnanvuitte žilo [[Karjalan Tazovaldkund]]an keskuzpalan päivlaskmas. Se om [[Mujezerskijan rajon]]an administrativine keskuz da kaikiš suremb eländpunkt, mugažo Mujezerskijan lidnkundan keskuz da sen üks'jäine eländpunkt.
+'''Mujezerskii''' ({{lang-ru|Муезерский}}, {{lang-krl|Mujejärvi}}, {{lang-fi|Mujejärvi / Muujärvi}}) om [[Venäma]]n lidnanvuitte žilo [[Karjalan Tazovaldkund]]an keskuzpalan päivlaskmas. Se om [[Mujezerskijan rajon]]an administrativine keskuz da kaikiš suremb eländpunkt, mugažo Mujezerskijan lidnankundan keskuz da sen üks'jäine eländpunkt.
 
 == Istorii ==
 Eländpunktan aluz om pandud 16. voz'sadal kuti Mujezero-külä. [[Toine mail'man soda|Toižen mail'man sodan]] aigan külä oli muretud. Vl 1962 [[Päivlaskmaine Karjalan raudte]] ühtenzoiti küläd [[Sojärv (lidn)|Sojärvenke]]. Vl 1965 žilo Mujezerk-raudtestancijanno sai lidnanvuiččen žilon statusad, nimitihe žilod nügüdläižikš.
@@ -22,14 +22,14 @@ Eländpunktan aluz om pandud 16. voz'sadal kuti Mujezero-külä. [[Toine mail'ma
 Vl 1966 tal'vkun 30. päiväl Mujezerskijan rajonan aluz om pandud, Mujezerskii-žilo kändihe sen administrativižeks keskuseks.
 
 == Geografijan andmused ==
-Žilo sijadase rajonan keskuses, enččiden [[Reboli]]- da [[Rugjärv (külä)|Rugjärv]]-rajonkeskusiden kesktahos, [[Mujezerk]]-jogen hural randal tobjimalaz. [[Mec]] ümbärdab žilod. Žilon pen' pala sijadase 15 km päivlaskmha Mui-järven lodehližel randal. Matkad [[Petroskoi]]hesai om 270 kilometrad suvipäivnouzmha orhal, 375 km raudtedme, 440 km avtotedme. Lähembaine lidn om [[Kostamukš]], 97 km lodeheze orhal.
+Žilo sijadase rajonan keskuzpalas, enččiden [[Reboli]]- da [[Rugjärv (külä)|Rugjärv]]-rajonkeskusiden kesktahos, [[Mujezerk]]-jogen hural randal tobjimalaz. [[Mec]] ümbärdab žilod. Žilon pen' pala sijadase 15 km päivlaskmha Mui-järven lodehližel randal. Matkad [[Petroskoi]]hesai om 270 kilometrad suvipäivnouzmha orhal, 375 km raudtedme, 440 km avtotedme. Lähembaine lidn om [[Kostamukš]], 97 km lodeheze orhal.
 
-Klimat om ven. Voden keskmäine lämuz om +1,3 C°.
+Klimat om [[ven vö|ven]]. Voden keskmäine lämuz om +1,3 C°.
 
 == Tobmuz ==
-Kaik 10 ezitajad mülüdas Lidnkundan Nevondkundha ({{lang-ru|Совет поселения}}). Valitihe heid järgenduseližen kerdan vl 2013 sügüz'kun 8. päiväl (koumanz' kucund)<ref>[http://www.karel.vybory.izbirkom.ru/region/karel?action=show&vrn=4104009129228&region=10&prver=0&pronetvd=null Выборы депутатов Муезерского городского поселения третьего созыва (Mujezerskijan lidnkundan ezitajiden valičendad - koumanz' kucund). — Tedod mänijoiš valičendoiš da referendumiš (vybory.izbirkom.ru) // Venälaižen Federacijan keskuzline valičemižlaudkund.] {{ref-ru}}</ref>.
+Kaik 10 ezitajad mülüdas Lidnankundan Nevondkundha ({{lang-ru|Совет поселения}}). Valitihe heid järgenduseližen kerdan vn 2013 sügüz'kun 8. päiväl (koumanz' kucund)<ref>[http://www.karel.vybory.izbirkom.ru/region/karel?action=show&vrn=4104009129228&region=10&prver=0&pronetvd=null Выборы депутатов Муезерского городского поселения третьего созыва (Mujezerskijan lidnkundan ezitajiden valičendad — koumanz' kucund). — Tedod mänijoiš valičendoiš da referendumiš // Venälaižen Federacijan keskuzline valičemižlaudkund (''vybory.izbirkom.ru'').] {{ref-ru}}</ref>.
 
-Lüdmila Barinkova radab lidnkundan pämehen vn 2013 sügüz'kun 8. päivän valičendoiden jäl'ghe. Hänen valdatusiden strok om viž vot.
+Lüdmila Barinkova radab lidnankundan pämehen vn 2013 sügüz'kun 8. päivän valičendoiden jäl'ghe. Hänen valdatusiden strok om viž vot.
 
 == Eläjad ==
 Kaikiš suremb žilon ristitišt oli 4 400 eläjad vl 1989. Vn 2002 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 4 007 ristitud, vl 2010 — 3 328 ristitud. Rajonan ristitišton kaks' seičemendest eläb žilos.
@@ -41,13 +41,13 @@ Ižandusen sarak oma mecižandusen edheotand.
 
 [[Sojärv (lidn)|Sojärv]] — [[Kostamukš]]-raudtekeskust läbitab žilod, ''Mujezerk''-raudtestancii om siš.
 
-Kul'turpert' i rajonan kirjišt oma žilos. Opendusen aluzkundad oma keskškol da čomamahtoiden lapsidenškol.
+Kul'turpert' i rajonan kirjišt ratas žilos. Opendusen aluzkundad oma keskškol da čomamahtoiden lapsidenškol.
 
 == Homaičendad ==
 <references />
 
 == Irdkosketused ==
-* [http://muezersky.ru/poselen/muezerskoe_gor/ Mujezerskijan lidnkundan lehtpoled Mujezerskijan rajonan oficialižel saital.] {{ref-ru}}
+* [http://muezersky.ru/poselen/muezerskoe_gor/ Mujezerskijan lidnankundan lehtpoled Mujezerskijan rajonan oficialižel ''muezersky.ru''-saital.] {{ref-ru}}
 
 [[Kategorii:Mujezerskijan rajon|*]]
 [[Kategorii:Karjalan Tazovaldkundan lidnanvuiččed žilod]]
