--- a/Mujezerskii.mw
+++ b/Mujezerskii.mw
@@ -48,6 +48,7 @@ Kul'turpert' i rajonan kirjišt ratas žilos. Opendusen aluzkundad oma keskškol
 
 == Irdkosketused ==
 * [http://muezersky.ru/poselen/muezerskoe_gor/ Mujezerskijan lidnankundan lehtpoled Mujezerskijan rajonan oficialižel ''muezersky.ru''-saital.] {{ref-ru}}
+{{Commons|Category:Muyezersky}}
 
 [[Kategorii:Mujezerskijan rajon|*]]
 [[Kategorii:Karjalan Tazovaldkundan lidnanvuiččed žilod]]
