--- a/Louhi.mw
+++ b/Louhi.mw
@@ -1,53 +1,54 @@
 {{Eländpunkt
  | Nimi = Louhi <small>(vep., karj. i suom.)</small><br />Лоухи <small>(ven.)</small>
- | Lidnanznam = Coat of arms of Loukhi (2013).gif
- | Flag = Flag of Loukhi (Karelia).png
+ | Lidnanznam = Coat of arms of Loukhi.svg
+ | Flag = Flag of Loukhi.svg
  | Lidnanznam text = Louhin znam
  | Flag text = Louhin flag
  | Valdkund = Venäma
  | Eläjiden lugu = 4,080
  | Voz' = 2016
  | Pind = 29.2
- | Fail = 
- | Pämez' = Sergei Lebedev (2009-)
+ | Fail = Лоухи ст.jpg
+ | Pämez' = Sergei Lebedev<br/>(2009—)
  | Telefonkod = +7-81439-xx-xxx
  | Avtokod = 10
  | Aigvö = [[UTC]]+3 ([[MSK]]+0)
 }}
-'''Louhi''' (mugažo [[karjalan kel'|karjalan]] i [[suomen kel'|suomen]] kelil; [[venäkel'|ven]].: ''Лоухи'') om [[Venäma]]n lidnanvuitte žilo da raudtesol'm [[Karjalan Tazovaldkund]]an pohjoižes. Se om [[Louhin rajon]]an administrativine keskuz da kaikiš suremb eländpunkt, mugažo Louhin lidnkundan keskuz.
+'''Louhi''' (mugažo [[karjalan kel'|karjalan]] i [[suomen kel'|suomen]] kelil; {{lang-ru|Лоухи}}) om [[Venäma]]n lidnanvuitte žilo da raudtesol'm [[Karjalan Tazovaldkund]]an pohjoižes. Se om [[Louhin rajon]]an administrativine keskuz da kaikiš suremb eländpunkt, mugažo Louhin lidnankundan keskuz.
 
 == Istorii ==
-Eländpunktan aluz om pandud vl 1913 kuti raudtestancii [[Petroskoi]] — [[Murmansk]]. Vl 1944 Louhi-külä sai lidnanvuiččen žilon statusad.
+Eländpunktan aluz om pandud vl 1913 kuti stancii [[Petroskoi]] — [[Murmansk]]-raudtekeskustal. Vl 1944 Louhi-külä sai lidnanvuiččen žilon statusad.
 
 [[Kalevala]]n mödhe, Louhi-akaine, [[Pohjol]]an emändaine, eli neniš tahoiš. Žilon nimituz om sidodud hänehe.
 
 == Geografijan andmused ==
-Žilo sijadase rajonan päivnouzmas, mecjärviden keskes, 90 m valdmeren pindan päl keskkorktusel. Panovo-järv om kaikiš znamasižemb žilos, no äjan järedambad järved sijadasoiš severziš kilometriš sišpäi — oz., [[Plotičnoje]] i [[Kenjärv]]. Matkad [[Petroskoi]]hesai om 481 kilometrad suvhe orhal, 552 km avtotedme. Lähembaižed lidnad oma [[Kem']] da [[Kandalakš]], pol'tošt sadad kilometrid jogahižhesai.
+Žilo sijadase rajonan päivnouzmas, mecjärviden keskes, 90 m valdmeren pindan päl keskmäižel korktusel. Panovo-järv om kaikiš znamasižemb žilos, no äjan järedambad järved sijadasoiš severziš-se kilometriš sišpäi — oz., [[Plotičnoje]] i [[Kenjärv]]. Matkad [[Petroskoi]]hesai om 481 kilometrad suvhe orhal, 552 km avtotedme. Lähembaižed lidnad oma [[Kem']] da [[Kandalakš]], pol'tošt sadad kilometrid jogahižhesai.
 
-Klimat om ven pohjoižmeriden. Voden keskmäine lämuz om +0,2°C.
+Klimat om [[ven vö|ven]] pohjoižmeriden. Voden keskmäine lämuz om +0,2 C°.
 
 == Tobmuz ==
-10 ezitajad mülüdas Lidnkundan Nevondkundha (ven. ''Совет поселения''). Valitihe heid järgenduseližen kerdan vl 2013 sügüz'kun 8. päiväl (koumanz' kucund)<ref>[http://www.vybory.izbirkom.ru/region/izbirkom?action=show&vrn=4104007119966&region=10&prver=0&pronetvd=null Выборы депутатов Лоухского городского поселения третьего созыва (Louhin lidnkundan ezitajiden valičendad - koumanz' kucund). — Tedod mänijoiš valičendoiš da referendumiš (vybory.izbirkom.ru) // Venälaižen Federacijan keskuzline valičemižlaudkund.] {{ref-ru}}</ref>.
+Kaik kümne ezitajad mülüdas Lidnankundan Nevondkundha ({{lang-ru|Совет поселения}}). Valitihe heid järgenduseližen kerdan vn 2013 sügüz'kun 8. päiväl (koumanz' kucund)<ref>[http://www.vybory.izbirkom.ru/region/izbirkom?action=show&vrn=4104007119966&region=10&prver=0&pronetvd=null Выборы депутатов Лоухского городского поселения третьего созыва (Louhin lidnkundan ezitajiden valičendad - koumanz' kucund). — Tedod mänijoiš valičendoiš da referendumiš (vybory.izbirkom.ru) // Venälaižen Federacijan keskuzline valičemižlaudkund (''&'').] {{ref-ru}}</ref>.
 
-Sergei Lebedeb radab lidnkundan pämehen vn 2009 redukun 11. päivän valičendoiden jäl'ghe kahtenden strokun jäl'geten. Hänen valdatusiden strok om nell' vot.
+Sergei Lebedeb radab lidnankundan pämehen vn 2009 redukun 11. päivän valičendoiden jäl'ghe kahtenden strokun jäl'geten. Hänen valdatusiden strok om nell' vot.
 
 == Eläjad ==
-Kaikiš suremb ristitišt oli vozil 1959 — 6 107 eläjad, i 1989 — 6 405 eläjad. Vn 2002 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 5 920 ristitud, vl 2010 — 4 772 ristitud. Rajonan ristitišton koumandez eläb žilos.
+Kaikiš suremb žilon ristitišt oli 6 107 eläjad vl 1959, i 6 405 eläjad vl 1989. Vn 2002 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 5 920 ristitud, vl 2010 — 4 772 ristitud. Rajonan ristitišton koumandez eläb žilos.
 
 [[Hristanuskond]]an kaks' pühäpertid om žilos.
 
 == Ižanduz da transport ==
 Ižandusen sarakod oma mecižandusen edheotand, raudten edheotand, avtotesauvondan kompanijan palakund, maižanduzedheotand.
 
-Raudte läbitab žilod päivnouzmas, [[Kol (avtote)|«Kol»-avtote]] ümbärdab žilod 3 kilometras päivlaskmas. Raudtesarak [[Päjärv (raudtestancii)|Päjärvhesai]] lähteb päivlaskmha Louhišpäi pidust' žilon pohjoižröunad, sarak om 110 km pitte.
+Raudte läbitab žilod päivnouzmas, «[[Kol (avtote)|Kol]]»-avtote ümbärdab žilod koumes kilometras päivlaskmas. Raudtesarak [[Päjärv (raudtestancii)|Päjärvhesai]] lähteb päivlaskmha Louhišpäi pidust' žilon pohjoižröunad, sarak om 110 km pitte.
 
-Kul'turpert', lapsidensädamižen pert' i kirjišt oma žilos. Opendusen aluzkundad oma alaškol, keskškol, lapsidenmuzikškol, lapsidensportškol.
+Kul'turpert', lapsidensädamižen pert' i kirjišt oma avaitud žilos. Opendusen aluzkundad oma alaškol, keskškol, lapsidenmuzikškol, lapsidensportškol.
 
 == Homaičendad ==
 <references />
 
 == Irdkosketused ==
 * [http://www.louhigor.ru/ Louhin lidnkundan oficialine sait.] {{ref-ru}}
+{{Commons|Category:Louhi}}
 
 [[Kategorii:Louhin rajon|*]]
 [[Kategorii:Karjalan Tazovaldkundan lidnanvuiččed žilod]]
