--- a/Louhin_rajon.mw
+++ b/Louhin_rajon.mw
@@ -1,9 +1,9 @@
 {{Rajon
 | Nimi          = Louhin rajon<br />Лоухский район <small>(ven.)</small><br />Louhen piiri <small>(suom.)</small>
-| Znam          = Louhi.jpg
-| Flag          = 
+| Znam          = Loukhskiy rayon COA (2013).jpg
+| Flag          = Flah of Loukhsky rayon.png
 | Znam text     = Louhin rajonan znam
-| Flag text     =
+| Flag text     = Louhin rajonan flag
 | Valdkund      = Venäma
 | Pälidn        = Louhi
 | Eläjiden lugu = 12,056
