--- a/Louhi.mw
+++ b/Louhi.mw
@@ -1,6 +1,6 @@
 {{Eländpunkt
  | Nimi = Louhi <small>(vep., karj. i suom.)</small><br />Лоухи <small>(ven.)</small>
- | Lidnanznam = Coat of arms of Loukhi.svg
+ | Lidnanznam = Coat of Arms of Loukhi.svg
  | Flag = Flag of Loukhi.svg
  | Lidnanznam text = Louhin znam
  | Flag text = Louhin flag
@@ -27,7 +27,7 @@ Eländpunktan aluz om pandud vl 1913 kuti stancii [[Petroskoi]] — [[Murmansk]]
 Klimat om [[ven vö|ven]] pohjoižmeriden. Voden keskmäine lämuz om +0,2 C°.
 
 == Tobmuz ==
-Kaik kümne ezitajad mülüdas Lidnankundan Nevondkundha ({{lang-ru|Совет поселения}}). Valitihe heid järgenduseližen kerdan vn 2013 sügüz'kun 8. päiväl (koumanz' kucund)<ref>[http://www.vybory.izbirkom.ru/region/izbirkom?action=show&vrn=4104007119966&region=10&prver=0&pronetvd=null Выборы депутатов Лоухского городского поселения третьего созыва (Louhin lidnkundan ezitajiden valičendad - koumanz' kucund). — Tedod mänijoiš valičendoiš da referendumiš (vybory.izbirkom.ru) // Venälaižen Federacijan keskuzline valičemižlaudkund (''&'').] {{ref-ru}}</ref>.
+Kaik kümne ezitajad mülüdas Lidnankundan Nevondkundha ({{lang-ru|Совет поселения}}). Valitihe heid järgenduseližen kerdan vn 2013 sügüz'kun 8. päiväl (koumanz' kucund)<ref>[http://www.vybory.izbirkom.ru/region/izbirkom?action=show&vrn=4104007119966&region=10&prver=0&pronetvd=null Выборы депутатов Лоухского городского поселения третьего созыва (Louhin lidnkundan ezitajiden valičendad - koumanz' kucund). — Tedod mänijoiš valičendoiš da referendumiš // Venälaižen Federacijan keskuzline valičemižlaudkund (''vybory.izbirkom.ru'').] {{ref-ru}}</ref>.
 
 Sergei Lebedeb radab lidnankundan pämehen vn 2009 redukun 11. päivän valičendoiden jäl'ghe kahtenden strokun jäl'geten. Hänen valdatusiden strok om nell' vot.
 
@@ -47,7 +47,7 @@ Kul'turpert', lapsidensädamižen pert' i kirjišt oma avaitud žilos. Opendusen
 <references />
 
 == Irdkosketused ==
-* [http://www.louhigor.ru/ Louhin lidnkundan oficialine sait.] {{ref-ru}}
+* [http://louhiadm.ru/poselenija Louhin lidnankundan lehtpoled rajonan oficialižel ''louhiadm.ru''-saital.] {{ref-ru}}
 {{Commons|Category:Louhi}}
 
 [[Kategorii:Louhin rajon|*]]
