--- a/Präž.mw
+++ b/Präž.mw
@@ -1,5 +1,5 @@
 {{Eländpunkt
- | Nimi = Präž<br />Пряжа <small>(ven.)</small><br />Priäžä <small>(karj.)</small><br />Prääsä <small>(suom.)</small>
+ | Nimi = Präž<br />Пряжа <small>(ven.)</small><br />Priäžä / Priäžy <small>(karj.)</small><br />Prääsä <small>(suom.)</small>
  | Valdkund = Venäma
  | Eläjiden lugu = 3,487
  | Voz' = 2019-01-01
@@ -10,7 +10,7 @@
  | Avtokod = 10
  | Aigvö = [[UTC]]+3 ([[MSK]]+0)
 }}
-'''Präž''' ({{lang-ru|Пряжа}}, {{lang-krl|Priäžä}}, {{lang-fi|Prääsä}}) om [[Venäma]]n lidnanvuitte žilo [[Karjalan Tazovaldkund]]an suves. Se om [[Präžan rahvahaline rajon|Präžan rahvahaližen rajonan]] administrativine keskuz da kaikiš suremb eländpunkt, mugažo Präžan lidnankundan keskuz.
+'''Präž''' ({{lang-ru|Пряжа}}, {{lang-krl|Priäžä / Priäžy}}, {{lang-fi|Prääsä}}) om [[Venäma]]n lidnanvuitte žilo [[Karjalan Tazovaldkund]]an suves. Se om [[Präžan rahvahaline rajon|Präžan rahvahaližen rajonan]] administrativine keskuz da kaikiš suremb eländpunkt, mugažo Präžan lidnankundan keskuz.
 
 == Istorii ==
 Ezmäižed eländpunktad [[Präžanjärv]]en randoil mainitasoiš Änižen pätinan aigkirjas vll 1582−1583. Külä Präž-nimenke mainitase ezmäižen kerdan 1640-nzil vozil.
@@ -31,14 +31,14 @@ Man'g-žilo ({{lang-ru|Маньга}}), Man'g-külä i Kindasovo-külä mülüda
 == Tobmuz ==
 Lidnankundan uz' päkäskuz om vahvištadud vl 2012, se vajehti vn 2008 päkäskust.
 
-Kaik 10 ezitajad mülüdas Lidnankundan Nevondkundha ({{lang-ru|Совет поселения}}). Valitihe heid järgenduseližen kerdan vl 2013 sügüz'kun 8. päiväl (koumanz' kucund)<ref>[http://www.vybory.izbirkom.ru/region/izbirkom?action=show&vrn=4104014120293&region=10&prver=0&pronetvd=null Выборы депутатов Пряжинского городского поселения третьего созыва (Präžan lidnankundan ezitajiden valičendad − koumanz' kucund). — Tedod mänijoiš valičendoiš da referendumiš (''vybory.izbirkom.ru'') // Venälaižen Federacijan keskuzline valičemižlaudkund.] {{ref-ru}}</ref>. Andrei Stajennii radab sen ezimehen.
+Kaik 10 ezitajad mülüdas Lidnankundan Nevondkundha ({{lang-ru|Совет поселения}}). Valitihe heid järgenduseližen kerdan vn 2013 sügüz'kun 8. päiväl (koumanz' kucund)<ref>[http://www.vybory.izbirkom.ru/region/izbirkom?action=show&vrn=4104014120293&region=10&prver=0&pronetvd=null Выборы депутатов Пряжинского городского поселения третьего созыва (Präžan lidnankundan ezitajiden valičendad − koumanz' kucund). — Tedod mänijoiš valičendoiš da referendumiš // Venälaižen Federacijan keskuzline valičemižlaudkund (''vybory.izbirkom.ru'').] {{ref-ru}}</ref>. Andrei Stajennii radab sen ezimehen.
 
 Aleksandr Karpov radab lidnankundan pämehen vn 2013 sügüz'kun 8. päivän valičendoiden jäl'ghe. Hänen valdatusiden strok om viž vot. Varapämez' om hänele abhu.
 
 == Eläjad ==
 Vl 1939 žilon ristitišt oli 1 898 eläjad, vl 1959 — 2 519 eläjad. Vn 2002 Venäman rahvahanlugemižen mödhe žilon eläjiden lugu oli 4 269 ristitud, vl 2010 — 3 675 ristitud. Kaikiš suremb ristitišt oli 4 809 eläjad vl 1979. Rajonan ristitišton nelländez eläb žilos.
 
-Vspäi 2001 [[ortodoksine hristanuskond|ortodoksižen hristanuskondan]] Pühän Jumalanmaman Katken kivesine pühäpert'<ref>[http://sobory.ru/geo/locat/631 Präžan pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> om avaitud žilos, mugažo ph. Uar Egiptalaine-moknikan puine časoun' om saudud vll 2014−2018.
+Vspäi 2001 [[ortodoksine hristanuskond|ortodoksižen hristanuskondan]] Pühän Jumalanmaman Katken kivine pühäpert'<ref>[http://sobory.ru/geo/locat/631 Präžan pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> om avaitud žilos, mugažo ph. Uar Egiptalaine-moknikan puine časoun' om saudud vll 2014−2018.
 
 == Ižanduz da transport ==
 Ižandusen sarakod oma mecan varhapanend, [[pu (material)|pumaterialan]] ümbriradmine, avtotekohendusen edheotandad, marjoiden ümbriradmižtegim, maižanduz, sömän pästand živatoiden täht, turizm.
@@ -51,7 +51,7 @@ Kodirandantedištandmuzei, čomamahtoiden lapsidenškol i kaks' rajonkirjištod 
 <references />
 
 == Irdkosketused ==
-* [http://pryazha.karelia.info/official/1266404376.html Präžan lidnankundan lehtpoled Präžan rahvahaližen rajonan oficialižel ''pryazha.karelia.info''-saital.] {{ref-ru}}
+* [http://adm-priaza.ru/ Präžan lidnankundan oficialine sait (''adm-priaza.ru'').] {{ref-ru}}
 {{Commons|Category:Pryazha}}
 
 [[Kategorii:Karjalan Tazovaldkundan lidnanvuiččed žilod]]
