*Empty MediaWiki Message*

--- a/Präž.mw
+++ b/Präž.mw
@@ -43,7 +43,7 @@ Vspäi 2001 [[ortodoksine hristanuskond|ortodoksižen hristanuskondan]] Pühän 
 == Ižanduz da transport ==
 Ižandusen sarakod oma mecan varhapanend, [[pu (material)|pumaterialan]] ümbriradmine, avtotekohendusen edheotandad, marjoiden ümbriradmižtegim, maižanduz, sömän pästand živatoiden täht, turizm.
 
-«Kol»-avtote (E105-trass) ümbärdab žilod pidust' päivlaskmašt röunad. Avtote [[Sortaval]]hasai (A-129) lähteb žilospäi.
+«[[Kol (avtote)|Kol]]»-avtote (E105-trass) ümbärdab žilod pidust' päivlaskmašt röunad. Avtote [[Sortaval]]hasai (A-129) lähteb žilospäi.
 
 Kodirandantedištandmuzei, čomamahtoiden lapsidenškol i kaks' rajonkirjištod oma žilos. Opendusen aluzkund om keskškol.
 
