formitez, toine radai kosketuz

--- a/Präžan_rahvahaline_rajon.mw
+++ b/Präžan_rahvahaline_rajon.mw
@@ -36,20 +36,20 @@ Om röunoid 6 Venäman rajonanke:
 * päivlaskmas da lodehes [[Karjalan Tazovaldkund]]an [[Sojärven rajon]]anke;
 * pohjoižes [[Karjalan Tazovaldkund]]an [[Kondopogan rajon]]anke.
 
-Reljef om kukhikaz mecakaz sodunu tazangišt. Joged mülüdas [[Atlantine valdmeri|Atlantižen valdmeren]] basseinha, erigoitai pird [[Änine|Änižen]] i [[Ladog]]an basseinoiden keskes läbitab rajonan territorijad. Znamasine järv om [[Sämjärv]] (ven. ''Сямозеро'') 266 km² pindanke rajonan pohjoižes.
+Reljef om kukhikaz mecakaz sodunu tazangišt. Joged mülüdas [[Atlantine valdmeri|Atlantižen valdmeren]] basseinha, erigoitai pird [[Änine|Änižen]] i [[Ladog]]an basseinoiden keskes läbitab rajonan territorijad. Znamasine järv om [[Sämjärv]] ({{lang-ru|Сямозеро}}) 266 km² pindanke rajonan pohjoižes.
 
 Klimat om [[ven vö|ven]] pehmed. Vilukun keskmäine lämuz om −10,7 C°, heinkun kesklämuz om +16,3 C°.
 
 Londuseližed varad oma [[turbaz]], sauvondmaterialad ([[rugižkivi]], [[ozrikkivi]], [[mramor]], [[sauvondkivi]], [[savi]]), [[mec]], [[kala]], [[vezi|reskvezi]].
 
-Vspäi 2005 rajonan territorii jagase 7 municipaližhe ühtnikha: 1 lidnankund da 6 küläkundad.
+Vspäi 2005 rajonan territorii jagase sečemeks municipaližeks ühtnikaks: üks' lidnankund da kuz' küläkundad.
 
 == Eläjad ==
 Vn 2002 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 18 224 ristitud, vl 2010 — 14 664 ristitud.
 
-Kaik om 82 eländpunktad rajonas (vl 2005), sidä kesken 1 lidnanvuitte žilo, 14 külänvuittušt žilod, 3 raudtestancijad kaikenaigaiženke ristitištonke da 63 küläd.
+Kaik om 82 eländpunktad rajonas (vl 2005), sidä kesken üks' lidnanvuitte žilo, 14 külänvuittušt žilod, koume raudtestancijad kaikenaigaiženke ristitištonke da 63 küläd.
 
-Toižed sured eländpunktad oma [[Čaln]]-žilo (2,6 tuh. rist. vl 2013), [[Essoil]]-žilo (1,7 tuh. rist. vl 2013) da [[Matrosad]]-žilo (1,4 tuh. rist. vl 2016).
+Toižed znamasižed eländpunktad oma [[Čaln]]-žilo (2,6 tuh. rist. vl 2013), [[Essoil]]-žilo (1,7 tuh. rist. vl 2013) da [[Matrosad]]-žilo (1,4 tuh. rist. vl 2016).
 
 Rahvahad (vn 2002 Venäman rahvahanlugemižen mödhe, enamba 5%): [[venälaižed]] — 46%, [[karjalaižed]] — 37%, [[suomalaižed]] — 6%, [[vaugedvenälaižed]] — 5%, toižed rahvahad — 6%.
 
@@ -57,7 +57,7 @@ Rahvahad (vn 2002 Venäman rahvahanlugemižen mödhe, enamba 5%): [[venälaižed
 <references />
 
 == Irdkosketused ==
-* [http://pryazha.karelia.info/ Präžan rahvahaližen rajonan oficialine sait (''pryazha.karelia.info'').] (venäkelel)
+* [http://pryazha.org/ Präžan rahvahaližen rajonan oficialine sait (''pryazha.org'').] (venäkelel)
 * [http://www.gov.karelia.ru/gov/Regions/Praja/index.html Präžan rahvahaline rajon Karjalan Tazovaldkundan oficialižel ''gov.karelia.ru''-saital.] (venäkelel)
 
 {{Karjalan Tazovaldkundan rajonad}}
