--- a/Präž.mw
+++ b/Präž.mw
@@ -4,7 +4,7 @@
  | Eläjiden lugu = 3,487
  | Voz' = 2019-01-01
  | Pind =
- | Fail = Pryazha town hall winter.jpg
+ | Fail = Pryazha library.jpg
  | Pämez' = Aleksandr Karpov<br />(sügüz'ku 2013—)
  | Telefonkod = +7-81456-xx-xxx
  | Avtokod = 10
@@ -46,6 +46,15 @@ Ižandusen sarakod oma mecan varhapanend, [[pu (material)|pumaterialan]] ümbrir
 «[[Kol (avtote)|Kol]]»-avtote (E105-trass) ümbärdab žilod pidust' päivlaskmašt röunad. Avtote [[Sortaval]]hasai (A-129) lähteb žilospäi.
 
 Kodirandantedištandmuzei, čomamahtoiden lapsidenškol i kaks' rajonkirjištod oma žilos. Opendusen aluzkund om keskškol.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Pryazha town hall winter.jpg|Lidnan da rajonan tobmuden sauvuz (2010)
+Покровский храм в поселке Пряжа.JPG|Pühän Jumalanmaman Katken pühäpert', vn 2004 nägu
+Pryazha ZAGS.jpg|ZAGS Präžas vl 2010
+Pryazha hospital at winter.jpg|Tazovaldkundan läžundkodin Präžan palakund (2010)
+Пряжа, кафе.jpg|Kafe avtotrassanno vl 2020
+</gallery>
 
 == Homaičendad ==
 <references />
