--- a/Mujezerskii.mw
+++ b/Mujezerskii.mw
@@ -43,6 +43,15 @@ Ižandusen sarak oma mecižandusen edheotand.
 
 Kul'turpert' i rajonan kirjišt ratas žilos. Opendusen aluzkundad oma keskškol da čomamahtoiden lapsidenškol.
 
+== Galerei ==
+<gallery>
+Муезерский, администрация.jpg|Rajonan administracijan sauvuz i skver (2021)
+Муезерский, церковь иконы Всецарица.jpg|Jumalanmaman «Kaiken car'ak»-jumalaižen pühäpert' (2021)
+Муезерский, дом культуры.jpg|Kul'turkeskuz vl 2021
+Муезерский, ул.Гагарина, братская могила 10-267 (1).jpg|Rajonan läžundkodi i nevondkundaližiden röunmansodamehiden velleskaum (2021)
+Станция Муезерка.jpg|Mujezerk-raudtestancii vl 2021
+</gallery>
+
 == Homaičendad ==
 <references />
 
