--- a/Rubens_Piter.mw
+++ b/Rubens_Piter.mw
@@ -3,7 +3,7 @@
 | изображение = Rubens Self-portrait 1623.jpg
 | описание изображения = Rubensan avtoportret, 1623
 }}
-'''Piter Rubens''' ({{lang-nl|Peter Paul Rubens}}; sünd. 28. kezaku 1577, [[Zigen]], [[Nassaun gercogkund]] — kol. 30. semendku 1640, [[Antverpen]], [[Suvialamad]]) oli [[Alamad|suvialamalaine]] vai [[Flamandii|flamandijalaine]] voimujupirdai, [[barokk]]on stilin ezitai.
+'''Piter Paul' Rubens''' ({{lang-nl|Peter Paul Rubens}} [ˈpitər 'pʌul 'rybə(n)s]; sünd. 28. kezaku 1577, [[Zigen]], [[Nassaun gercogkund]] — kol. 30. semendku 1640, [[Antverpen]], [[Suvialamad]]) oli [[Alamad|suvialamalaine]] vai [[Flamandii|flamandijalaine]] voimujupirdai, [[barokk]]on stilin ezitai.
 
 Lujas tutabad oma hänen kontrreformacižed altarižed töd, portretad, peizažad, istorižed töd [[Biblii|Biblijan]] i mifologižiden süžetiden mödhe.
 
