--- a/Rubens_Piter.mw
+++ b/Rubens_Piter.mw
@@ -3,9 +3,11 @@
 | изображение = Rubens Self-portrait 1623.jpg
 | описание изображения = Rubensan avtoportret, 1623
 }}
-'''Piter Paul' Rubens''' ({{lang-nl|Peter Paul Rubens}} [ˈpitər 'pʌul 'rybə(n)s]; sünd. 28. kezaku 1577, [[Zigen]], [[Nassaun gercogkund]] — kol. 30. semendku 1640, [[Antverpen]], [[Suvialamad]]) oli [[Alamad|suvialamalaine]] vai [[Flamandii|flamandijalaine]] voimujupirdai, [[barokk]]on stilin ezitai.
+'''Piter Paul' Rubens''' ({{lang-nl|Peter Paul Rubens}} [ˈpitər 'pʌul 'rybə(n)s]; sünd. 28. kezaku 1577, [[Zigen]], [[Nassaun gercogkund]] — kol. 30. semendku 1640, [[Antverpen]], [[Suvialamad]]) oli [[Alamad|suvialamalaine]] vai [[Flamandii|flamandijalaine]] voimujupirdai, [[barokk]]on stilin üks' alusenpanijoišpäi i keradai, Brüsselin kunigaztanhan diplomat.
 
 Lujas tutabad oma hänen kontrreformacižed altarižed töd, portretad, peizažad, istorižed töd [[Biblii|Biblijan]] i mifologižiden süžetiden mödhe.
+
+Rubensan sädamižen jäl'guz lugeb enamba mi koume tuhad kuvid, sidä kesken znamasine pala om tehtud ühthižtöiks openikoidenke da kollegoidenke ičeze radhonuses. Lugetas läz 1400 autentižid Rubensan voikuvid. Ottihe pirdajan sädusid tetpaižikš hänen elon aigan. Sen ližaks, om kaičenus äi diplomatižid kirjeižid.
 
 == Homaičendad ==
 <references/>
