--- a/Pert'kulun_torg.mw
+++ b/Pert'kulun_torg.mw
@@ -1,22 +1,24 @@
 [[Fail:Petersburg-square.jpg|thumb|right|250px|Pert'kulun torg]]
-'''Pert'kulun torg''' ({{lang-ru|Дворцовая площадь}}) om [[Piter]]in pätorg. Mülüb [[UNESCO|UNESCO:n]] Mail'man jäl'gushe vspäi 1990.
+'''Pert'kulun torg''' ({{lang-ru|Дворцовая площадь}}) om [[Piter]]in pätorg. Se om nimitadud [[Tal'vpert'kulu]]n mödhe. Mülüb [[UNESCO|UNESCO:n]] Mail'man jäl'gushe vspäi 1990.
 
-Vll 1918−1944 torgun nimituz oli Urickijan torg. Pert'kulun torgun arhitekturine ansambl' om saudud 18. voz'sadan kahtendes poles i 19. voz'sadan ezmäižes poles.
+Eziauguižešti Admiralusen nit oli torgun sijas vll 1736−1772. Nügüdläine nimituz om tetab vspäi 1766, oficialine vspäi 1772. Vll 1918−1944 torgun nimituz oli Urickijan torg.
+
+Pert'kulun torgun arhitekturine ansambl' om saudud 18. voz'sadan kahtendes poles i 19. voz'sadan ezmäižes poles, kogoneb istorijan muštnikoišpäi federaliženke znamoičendanke. Torgun pind om 5,4 ga.
 
 == Torgun shem ==
 {|
 |rowspan=12|[[Fail:Palace Square SPB.svg|350px]]
-|1 — [[Tal'vpert'kulu]].
+|1 — [[Tal'vpert'kulu]]
 |-
-|2 — [[Gvardijan korpusan štaban sauvuz]].
+|2 — [[Gvardijan korpusan štaban sauvuz]]
 |-
-|3 — [[Aleksandran kolonn]].
+|3 — [[Aleksandran kolonn]]
 |-
-|4 — [[Päštaban sauvuz]].
+|4 — [[Päštaban sauvuz]]
 |-
-|5 — [[Päštaban Triumfaline ark]].
+|5 — [[Päštaban Triumfaline bembelüläh]]
 |-
-|6 — [[Päadmiraluz|Admiraluz]].
+|6 — [[Päadmiraluz|Admiraluz]]
 |}
 
 == Homaičendad ==
