*Empty MediaWiki Message*

--- a/Pert'kulun_torg.mw
+++ b/Pert'kulun_torg.mw
@@ -1,9 +1,9 @@
 [[Fail:Petersburg-square.jpg|thumb|right|250px|Pert'kulun torg]]
 '''Pert'kulun torg''' ({{lang-ru|Дворцовая площадь}}) om [[Piter]]in pätorg. Se om nimitadud [[Tal'vpert'kulu]]n mödhe. Mülüb [[UNESCO|UNESCO:n]] Mail'man jäl'gushe vspäi 1990.
 
-Eziauguižešti Admiralusen nit oli torgun sijas vll 1736−1772. Nügüdläine nimituz om tetab vspäi 1766, oficialine vspäi 1772. Vll 1918−1944 torgun nimituz oli Urickijan torg.
+Pert'kulun torgun arhitekturine ansambl' om saudud 18. voz'sadan kahtendes poles i 19. voz'sadan ezmäižes poles, kogoneb istorijan muštnikoišpäi federaliženke znamoičendanke. Torgun pind om 5,4 ga. Sijadase lidnan [[Keskuzrajon (Piter)|Keskuzrajonas]].
 
-Pert'kulun torgun arhitekturine ansambl' om saudud 18. voz'sadan kahtendes poles i 19. voz'sadan ezmäižes poles, kogoneb istorijan muštnikoišpäi federaliženke znamoičendanke. Torgun pind om 5,4 ga.
+Eziauguižešti Admiraluden nit oli torgun sijas vll 1736−1772. Nügüdläine nimituz om tetab vspäi 1766, oficialine vspäi 1772. Vll 1918−1944 torgun nimituz oli Urickijan torg.
 
 == Torgun shem ==
 {|
