--- a/Käht.mw
+++ b/Käht.mw
@@ -5,8 +5,8 @@
  | Lidnanznam text = Kähtan lidnanznam
  | Flag text = Kähtan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 20,013
- | Voz' = 2017
+ | Eläjiden lugu = 20,654
+ | Voz' = 2021
  | Pind = 28
  | Fail = Kyahta.s gory.JPG
  | Pämez' = Evgenii Stepanov<br />(reduku 2008—)
@@ -19,7 +19,7 @@
 == Istorii ==
 Eländpunktan aluz om pandud Käht-jogen randal vl 1727 kuti ''Troickosavskan lidnuz'', nimitihe jumalanpertin mödhe lidnusen südäimes. Vl 1792 sirtihe muitad tänna Irkutskhasai. Vl 1805 žilo sai lidnan statusad, i vhesai 1934 nimitihe ''Troickosavsk:aks''. Oli [[čai|čaitorgovanoiden]] lidnaks, torguihe Kitainke.
 
-Lidn šingotase rahvahidenkeskeižel torguindal i sömtegimišton edheotandoil.
+Käht šingotase rahvahidenkeskeižel torguindal i sömtegimišton edheotandoil.
 
 == Geografijan andmused ==
 Lidn sijadase penen Kähtink-jogen oiktal randal ([[Seleng (jogi)|Selengan]] oiged ližajogi), 760 m ü.m.t. keskmäižel korktusel, jogi om lidnan suviröunaks da valdkundröunaks [[Mongolii|Mongolijanke]]. Matkad [[Ulan Ude]]hesai om 225 km pohjoižhe avtotedme. «Käht — Altanbulag»-röunpäličmänendtaho om olmas, Altanbulag om Mongolijan joudai ekonomine zon. Lähembaine lidn om [[Suhebatar]] (Mongolii) 27 km suvipäivlaskmha.
@@ -27,9 +27,23 @@ Lidn sijadase penen Kähtink-jogen oiktal randal ([[Seleng (jogi)|Selengan]] oig
 Sudž-žilo ({{lang-bua|Һyжаа}}, 43 rist. vl 2017) mülüb lidnankundha Kähtan ližaks. Lidnankundan pind — 374,38 km².
 
 == Eläjad ==
-Vl 2010 kaiken Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 20 024 ristitud, lidnankundan — 20 040 ristitud, rajonan pol'. Kaikiš suremb lidnan ristitišt oli 20 076 eläjad vl 2014. Ortodoksižen hristanuskondan kaks' jumalanpertid om olmas lidnas.
+Vl 2010 kaiken Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 20 024 ristitud, lidnankundan — 20 040 ristitud, rajonan pol'. Kaikiš suremb lidnan ristitišt om nügüd'.
 
-Burätijan tazovaldkundaline sauvond- i tegimištoližtehnologijoiden tehnikum i Baikalan medicinižen kolledžan (Selenginsk-žilo) filial oma professionaližen opendusen aluzkundoikš.
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Hristan Eläbzdusen päjumalanpert'<ref>[https://sobory.ru/geo/locat/8702 Kähtan pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> (om saudud vll 1830−1838), Jumalanmaman Emäganpäivän jumalanpert' (1884−1888) i vn 2020 Mikulai-čudonsädajan časoun' oma olmas lidnas, toižed kaks' pühäpertid oma kaičenus paloin.
+
+Burätijan tazovaldkundaline sauvond- i tegimištoližtehnologijoiden tehnikum<ref>[http://site-visitka.ru/ Burätijan tazovaldkundaližen sauvond- i tegimištoližtehnologijoiden tehnikuman sait (''site-visitka.ru'').] {{ref-ru}}</ref> i Baikalan medicinižen kolledžan (Selenginsk-žilo) filial oma professionaližen opendusen aluzkundoikš.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Кяхтинский краеведческий музей.JPG|Lidnan kodirandantedištandmuzei (2012)
+Церковь Воскресения Христова в Кяхте.JPG|Hristan Eläbzdusen päjumalanpert', vn 2012 nägu
+Гостиные ряды в Кяхте.JPG|Torguindrived vl 2012
+Kyahta cash processing center of National Bank of the Republic of Buryatia.jpg|Burätijan nacionaližen bankan lugendkasskeskuz Käht-lidnas vl 2009
+Красные казармы. Кяхта, Бурятия.jpg|Rusttad kazarmad — sodalidnut vl 2019
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://mo-kyakhta.bur.eis1.ru/ Lidnankundan tobmuden aluzkundoiden oficialine sait (''mo-kyakhta.bur.eis1.ru'').] {{ref-ru}}
